# szs_server

./: .gitmodules  CMakeLists.txt  README.md  main.cpp  soundzone_server_config.h.in
include/: slaves.h  sync_handler.h  szp_handler.h  szs_server.h
include/szs_server/: szp_handler.h
src/: slaves.cpp  sync_handler.cpp  szp_handler.cpp  szs_server.cpp
tests/: CMakeLists.txt
tests/test_send_packet/: CMakeLists.txt  test_send_packet.cpp
tests/test_sync_jitter/: CMakeLists.txt  test_sync_jitter.cpp
tests/test_sync_timeToSync/: CMakeLists.txt  test_sync_timeToSync.cpp
